tests/typing/bad/testfile-return-2.go
package main

func f() int { return }
func main() { }
